--- a/Homework Hard.ipynb
+++ b/Homework Hard.ipynb
@@ -28,11 +28,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "iSOQu8mKrUCU",
-        "outputId": "7742decd-9abe-4a26-ceba-3a3c62d91c7d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "iSOQu8mKrUCU",
+        "outputId": "7742decd-9abe-4a26-ceba-3a3c62d91c7d"
       },
       "source": [
         "!git clone https://github.com/ruthenian8/from-numpy-import-Neural-Network.git ./libs;"
@@ -167,11 +167,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "eBfMavU8q4PJ",
-        "outputId": "69eaca65-768b-4a1d-fad6-fbac6e19e4ff",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "eBfMavU8q4PJ",
+        "outputId": "69eaca65-768b-4a1d-fad6-fbac6e19e4ff"
       },
       "source": [
         "train_dataset = MNIST('.', train=True, download=False, transform=transform)\n",
@@ -257,12 +257,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JHultUf8q4PP",
-        "outputId": "332bbfcf-5680-4c51-c6b5-3b091ce54826",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 420
-        }
+        },
+        "id": "JHultUf8q4PP",
+        "outputId": "332bbfcf-5680-4c51-c6b5-3b091ce54826"
       },
       "source": [
         "X, y = next(iter(train_loader))\n",
@@ -340,11 +340,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EsrEMB7Aq4PR",
-        "outputId": "e51508a2-1302-4851-b623-62a013a9a993",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "EsrEMB7Aq4PR",
+        "outputId": "e51508a2-1302-4851-b623-62a013a9a993"
       },
       "source": [
         "x.shape"
@@ -366,11 +366,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "68HMd8zbq4PR",
-        "outputId": "c6ebf522-4e81-4925-c7ea-c25cf32c57b4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "68HMd8zbq4PR",
+        "outputId": "c6ebf522-4e81-4925-c7ea-c25cf32c57b4"
       },
       "source": [
         "x"
@@ -457,11 +457,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SQfCBhonq4PS",
-        "outputId": "93ffd33c-5826-42b0-b447-06023861d07f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "SQfCBhonq4PS",
+        "outputId": "93ffd33c-5826-42b0-b447-06023861d07f"
       },
       "source": [
         "x.view(x.shape[0], -1).numpy().shape"
@@ -553,11 +553,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Qh2HsDVQq4PT",
-        "outputId": "ee27ba0f-43ca-4a7f-965e-e079dea4e2b0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Qh2HsDVQq4PT",
+        "outputId": "ee27ba0f-43ca-4a7f-965e-e079dea4e2b0"
       },
       "source": [
         "x.shape"
@@ -627,11 +627,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4Iwlvv3oq4PU",
-        "outputId": "a69f53dc-b579-430c-ff96-95c652ed3b86",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4Iwlvv3oq4PU",
+        "outputId": "a69f53dc-b579-430c-ff96-95c652ed3b86"
       },
       "source": [
         "# количество эпох - полных проходов по датасету\n",
@@ -682,11 +682,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JXJBPV4Lq4PV",
-        "outputId": "702e139c-df57-403d-e1a3-51b28ce63317",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "JXJBPV4Lq4PV",
+        "outputId": "702e139c-df57-403d-e1a3-51b28ce63317"
       },
       "source": [
         "# таким образом мы создаем матрицу 64 на 512 с рандомными значениями\n",
@@ -722,11 +722,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zfouoSADq4PV",
-        "outputId": "ff73d240-052f-47af-8e2e-93fb5d8e0fa4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "zfouoSADq4PV",
+        "outputId": "ff73d240-052f-47af-8e2e-93fb5d8e0fa4"
       },
       "source": [
         "# большинство функций применяются к каждому элементу массива\n",
@@ -775,11 +775,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "VlDw21W5q4PW",
-        "outputId": "2c8ead50-2e87-42f1-9f1f-c816cef315a6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "VlDw21W5q4PW",
+        "outputId": "2c8ead50-2e87-42f1-9f1f-c816cef315a6"
       },
       "source": [
         "res.shape"
@@ -801,11 +801,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XWRiXLCeq4PW",
-        "outputId": "dc60a24c-cfef-4d2c-a1a8-c6edca5baddd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "XWRiXLCeq4PW",
+        "outputId": "dc60a24c-cfef-4d2c-a1a8-c6edca5baddd"
       },
       "source": [
         "res.shape == (x.shape[0], y.shape[1])"
@@ -1130,11 +1130,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0K_Q-SOALTI9",
-        "outputId": "3009e700-4f52-4704-a71c-58b4065bab09",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "0K_Q-SOALTI9",
+        "outputId": "3009e700-4f52-4704-a71c-58b4065bab09"
       },
       "source": [
         "np.dot(previous_grad, np.transpose(this))"
@@ -1205,11 +1205,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FDqoLOqoHe5U",
-        "outputId": "f180feec-bda9-4d76-c377-8bce88993ec4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "FDqoLOqoHe5U",
+        "outputId": "f180feec-bda9-4d76-c377-8bce88993ec4"
       },
       "source": [
         "a * b.astype(np.int_)"
@@ -1349,32 +1349,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "0L1Dnhjwczdq",
-        "outputId": "ee5c1149-05d8-4114-f8dd-f75d05e97d33",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "1 - np.array([0,1,0])"
-      ],
-      "execution_count": 104,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([1, 0, 1])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 104
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "yTU0MGIRq4Pd"
@@ -1393,17 +1367,15 @@
         "    def __init__(self):\n",
         "        self._x = None\n",
         "        self._y = None\n",
-        "        self._BCE = None\n",
         "\n",
         "    def forward(self, x, y):\n",
         "        y = np.expand_dims(y, 1)\n",
         "        self._x = x\n",
         "        self._y = y\n",
-        "        self._BCE = - np.mean(np.log(x) * y + np.log(1 - x) * (1 - y))\n",
-        "        return self._BCE\n",
+        "        return - np.mean(np.log(x) * y + np.log(1 - x) * (1 - y))\n",
         "\n",
         "    def backward(self):\n",
-        "        return (self._x - self._y) / self._y.shape[0]\n",
+        "        return (self._x - self._y) / (self._x - self._x * self._x) / self._x.shape[0]\n",
         "\n",
         "    def step(self, learning_rate):\n",
         "        pass"
@@ -1457,11 +1429,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SvfDfU2mmLwS",
-        "outputId": "f560ba7b-297c-4dda-d122-f68a5766bd5a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "SvfDfU2mmLwS",
+        "outputId": "f560ba7b-297c-4dda-d122-f68a5766bd5a"
       },
       "source": [
         "loss.forward(x, y)"
@@ -1483,11 +1455,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ti5iP17EmoBQ",
-        "outputId": "781d24d0-423e-4f89-9804-4b518565f09b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ti5iP17EmoBQ",
+        "outputId": "781d24d0-423e-4f89-9804-4b518565f09b"
       },
       "source": [
         "loss.backward()"
