--- a/Homework Hard.ipynb
+++ b/Homework Hard.ipynb
@@ -974,42 +974,6 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "rKANx2sX9HKr"
-      },
-      "source": [
-        "this = np.array([[0.00879391, 0.0075844 , 0.00430709],\n",
-        "                          [0.00884834, 0.00921104, 0.00044317],\n",
-        "                          [0.00011441, 0.00822498, 0.00122346],\n",
-        "                          [0.00338301, 0.0001627 , 0.00711473]])"
-      ],
-      "execution_count": 93,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "BC24Y307A6N-"
-      },
-      "source": [
-        "this = torch.tensor(np.random.rand(3, 4), requires_grad=True)"
-      ],
-      "execution_count": 61,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "heTnxqM5BEeO"
-      },
-      "source": [
-        "this.grad"
-      ],
-      "execution_count": 64,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "FuDnpKvYq4PZ"
@@ -1035,14 +999,16 @@
         "        # сохраняем градиент для весов\n",
         "        self._grad_weight = None\n",
         "        self._grad_bias = None\n",
+        "        self._x = None\n",
         "\n",
         "    def forward(self, x):\n",
+        "        self._x = x\n",
         "        return np.dot(x, self.weight) + self.bias\n",
         "\n",
         "    def backward(self, grad):\n",
-        "        backward_result = np.dot(previous_grad, np.transpose(this))\n",
-        "        self._grad_weight = \n",
-        "        self._grad_bias = \n",
+        "        backward_result = np.dot(grad, np.transpose(self.weight))\n",
+        "        self._grad_weight = np.dot(np.transpose(self._x), grad)\n",
+        "        self._grad_bias = np.sum(grad, axis=0)\n",
         "        return backward_result\n",
         "\n",
         "    def step(self, learning_rate):\n",
@@ -1122,37 +1088,10 @@
       },
       "source": [
         "forward = linear.forward(x)\n",
-        "# backward = linear.backward(previous_grad)"
+        "backward = linear.backward(previous_grad)"
       ],
       "execution_count": 86,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "0K_Q-SOALTI9",
-        "outputId": "3009e700-4f52-4704-a71c-58b4065bab09"
-      },
-      "source": [
-        "np.dot(previous_grad, np.transpose(this))"
-      ],
-      "execution_count": 96,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[0.01089683, 0.00842654, 0.00822628, 0.00729307],\n",
-              "       [0.00958704, 0.00833055, 0.00209236, 0.00543544]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 96
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -1161,7 +1100,7 @@
       },
       "source": [
         "# значения должны быть близкими\n",
-        "# assert np.allclose(correct_forward_result, forward)"
+        "assert np.allclose(correct_forward_result, forward)"
       ],
       "execution_count": null,
       "outputs": []
@@ -1173,7 +1112,7 @@
       },
       "source": [
         "# значения должны быть близкими\n",
-        "# assert np.allclose(correct_backward_result, backward)"
+        "assert np.allclose(correct_backward_result, backward)"
       ],
       "execution_count": null,
       "outputs": []
@@ -1185,7 +1124,7 @@
       },
       "source": [
         "# значения должны быть близкими\n",
-        "# assert np.allclose(linear._grad_weight, correct_grad_weight)"
+        "assert np.allclose(linear._grad_weight, correct_grad_weight)"
       ],
       "execution_count": null,
       "outputs": []
@@ -1197,36 +1136,10 @@
       },
       "source": [
         "# значения должны быть близкими\n",
-        "# assert np.allclose(linear._grad_bias, correct_grad_bias)"
+        "assert np.allclose(linear._grad_bias, correct_grad_bias)"
       ],
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "FDqoLOqoHe5U",
-        "outputId": "f180feec-bda9-4d76-c377-8bce88993ec4"
-      },
-      "source": [
-        "a * b.astype(np.int_)"
-      ],
-      "execution_count": 75,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([0, 0, 3, 4, 0])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 75
-        }
-      ]
     },
     {
       "cell_type": "markdown",
@@ -1429,66 +1342,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "SvfDfU2mmLwS",
-        "outputId": "f560ba7b-297c-4dda-d122-f68a5766bd5a"
-      },
-      "source": [
-        "loss.forward(x, y)"
-      ],
-      "execution_count": 171,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.24384403491500606"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 171
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ti5iP17EmoBQ",
-        "outputId": "781d24d0-423e-4f89-9804-4b518565f09b"
-      },
-      "source": [
-        "loss.backward()"
-      ],
-      "execution_count": 173,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[-0.05939423],\n",
-              "       [ 0.0227103 ],\n",
-              "       [-0.09955838],\n",
-              "       [ 0.02401699]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 173
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "aB7K5cufq4Pd"
       },
       "source": [
         "forward = loss.forward(x, y)\n",
-        "# backward = loss.backward()"
+        "backward = loss.backward()"
       ],
       "execution_count": 149,
       "outputs": []
@@ -1500,7 +1358,7 @@
       },
       "source": [
         "# значения должны быть близкими\n",
-        "# assert np.allclose(correct_forward_result, forward)"
+        "assert np.allclose(correct_forward_result, forward)"
       ],
       "execution_count": null,
       "outputs": []
@@ -1512,7 +1370,7 @@
       },
       "source": [
         "# значения должны быть близкими\n",
-        "# assert np.allclose(correct_backward_result, backward)"
+        "assert np.allclose(correct_backward_result, backward)"
       ],
       "execution_count": null,
       "outputs": []
